--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "devDependencies": {
     "phantomjs": "=0.0.8"
   },
+  "bugs": "https://github.com/One-com/knockout.autocomplete/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/One-com/knockout.autocomplete"
+  },
   "license": "Apache-2.0"
 }
