--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lib"
   ],
   "devDependencies": {
+    "jquery": "1.11.0",
+    "knockout": "3.4.0",
     "mocha": "2.3.2",
     "mocha-phantomjs-core": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.16",
